# nginx-log-analyzer

./: Cargo.toml  readme.md
res/: config.yaml  log.fmt  tmp.txt  type.fmt
src/: main.rs  nginx_log_analyze_error.rs  nginx_log_analyzer.rs  nginx_log_analyzer_cli.rs
src/analyzer/: calculator.rs  mod.rs  status.rs
src/cli/: mod.rs
src/config/: mod.rs
src/error/: invalid_access_log_error.rs  invalid_log_format_error.rs  invalid_stat_type_error.rs  load_file_error.rs  mod.rs  todo
src/item/: f64.rs  hour.rs  isize.rs  minute.rs  mod.rs  noop.rs  str.rs
src/option/: mod.rs
src/result/: mod.rs
src/stat/: enum_stat.rs  mod.rs  nginx_stat.rs  noop_stat.rs  num_stat.rs  stat.rs  stat_factory.rs
src/stat/item/: enum_item.rs  item_factory.rs  mod.rs  noop_item.rs  num_item.rs  time_hour_item.rs  time_item.rs
src/stat/item/result/: enum_result.rs  mod.rs  noop_result.rs  num_result.rs  time_hour_result.rs  time_result.rs
