[package]
name = "ryna"
version = "0.1.0"
authors = ["BlankZhu <707310837@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
env_logger = "0.8"
lazy_static = "1"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
